update obs to use 1971 to 2000 climatology

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -10,7 +10,9 @@
     "import cartopy.crs as ccrs\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
-    "import numpy"
+    "import numpy\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colorbar as cb\n"
    ]
   },
   {
@@ -53,7 +55,10 @@
    "outputs": [],
    "source": [
     "def plotAnom(da, ax, showOcean=True):\n",
+    "    \"\"\"For a provided dataarray and axis, plot the data, add coastlines and \"\"\"\n",
+    "    \n",
     "    import cartopy.feature as cfeature\n",
+    "    import matplotlib.ticker as mticker\n",
     "    \n",
     "        #set contour intervals and colours\n",
     "    if prPrecMatcher.search(da.name):\n",
@@ -87,9 +92,11 @@
     "        ),\n",
     "    )\n",
     "        \n",
-    "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':')\n",
+    "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':',zorder=3)\n",
     "    gl.top_labels=False\n",
     "    gl.left_labels=False\n",
+    "    gl.xlocator = mticker.FixedLocator([120, 130, 140, 150, 160])\n",
+    "    gl.ylocator = mticker.FixedLocator([-50,-40,-30,-20,-10,0])\n",
     "    \n",
     "\n",
     "    return cs\n"
@@ -105,22 +112,47 @@
    "outputs": [],
    "source": [
     "def plotStipling(da, ax):\n",
+    "    \"\"\"For a provided Dataarray and axis, \n",
+    "    add stipling where less than 70% of models agree with the sign of the change.\n",
+    "    \n",
+    "    Provided Dataarray is assumed to:\n",
+    "    - have dimensions lon,lat and model\n",
+    "    - be a datarray representing the mean impact in each model from 0/1/2/3 climate modes\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    try:\n",
+    "        if len(da.model.values)<2:\n",
+    "            raise EnvironmentError(\"Nothing to stiple, there needs to be at least 2 models\")\n",
+    "    except:\n",
+    "        raise EnvironmentError(\"Does this dataarray have a model dimension?\")\n",
+    "    #Error checking should probably check there are only three dimensions.\n",
+    "    \n",
     "    criteria=0.7*len(da.model.values) #70% of models\n",
     "\n",
+    "    #Find areas where the mean change is less than 0\n",
     "    meanLessThan=da.mean('model')<0\n",
+    "    #Find how many models agree on the sign of the change\n",
     "    lessThanCount=(da<0).sum('model')\n",
+    "    #Find areas where the number of models is less than the criteria (70%) \n",
     "    condLessThan=lessThanCount<criteria\n",
     "\n",
+    "    #Repeat for greater than\n",
     "    meanGreatThan=da.mean('model')>0\n",
     "    greatThanCount=(da>0).sum('model')\n",
     "    condGreatThan=greatThanCount<criteria\n",
+    "    \n",
+    "    #If mean is 0, this would mean no data, so do nothing.\n",
     "\n",
+    "    #Area to add stipling \n",
     "    combined=(\n",
     "        (meanLessThan&condLessThan) | (meanGreatThan&condGreatThan)\n",
     "    )\n",
     "\n",
+    "    #plot it\n",
+    "    plt.sca(ax)\n",
     "    plt.pcolor(\n",
-    "        combined.lon, combined.lat,\n",
+    "        combined.lon, \n",
+    "        combined.lat,\n",
     "        numpy.ma.masked_equal(combined,0),\n",
     "        hatch='.',\n",
     "        alpha=0,\n",
@@ -147,8 +179,6 @@
    "outputs": [],
    "source": [
     "def multiPlotter(da, mask, indeces, stipling=True, cbarLabel='_nolabel_'):\n",
-    "    import matplotlib.cm as cm\n",
-    "    import matplotlib.colorbar as cb\n",
     "\n",
     "    #Decide how many rows we are going to have\n",
     "    if da.year[0]<1850:\n",
@@ -206,7 +236,13 @@
     "            \n",
     "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
     "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
-    "            ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes)\n",
+    "            ax.text(\n",
+    "                0.035,0.045,\n",
+    "                \"n=\"+str(nEvents), \n",
+    "                transform=ax.transAxes, \n",
+    "                backgroundcolor='white',\n",
+    "                zorder=2\n",
+    "            )\n",
     "                            \n",
     "            #in the first column, put a y-label\n",
     "            if i==0:\n",
@@ -221,6 +257,8 @@
     "                \n",
     "            axs.append(ax)\n",
     "\n",
+    "    plt.subplots_adjust(hspace=0.02,wspace=0)\n",
+    "    \n",
     "    #put a color bar on\n",
     "       \n",
     "    axs.append(fig.add_axes([0.3,0.3,0.4,0.03]))\n",
@@ -245,9 +283,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def indexPlotter(impactXr, fEventsXr, fEventsLs, showOcean=True, stipling=True):\n",
+    "def indexPlotter(impactXr, fEventsXr, fEventsLs, showOcean=True, stipling=True, cbarLabel='_nolabel_'):\n",
     "    \n",
-    "    axesLs=list()\n",
+    "    axs=list()\n",
     "    nIndex=len(fEventsLs)\n",
     "\n",
     "    dimsNotLatLon=list(impactXr.dims)\n",
@@ -255,7 +293,8 @@
     "    dimsNotLatLon.remove('lon')\n",
     "\n",
     "    \n",
-    "    fig=plt.figure(figsize=(9,4))\n",
+    "    fig=plt.figure(figsize=(3*nIndex,6))\n",
+    "\n",
     "\n",
     "    for i in range(0,nIndex):\n",
     "\n",
@@ -266,7 +305,7 @@
     "        nEvents=impactXr.where(fEventsXr[iEvent]==True).isel(lon=15,lat=15).count().values\n",
     "                            \n",
     "        cs = plotAnom(\n",
-    "            impactXr.where(fEventsXr[iEvent]==True).mean('year'),\n",
+    "            impactXr.where(fEventsXr[iEvent]==True).mean(dimsNotLatLon),\n",
     "            ax,\n",
     "            showOcean\n",
     "        )\n",
@@ -276,14 +315,39 @@
     "                impactXr.where(fEventsXr[iEvent]==True).mean('year'),\n",
     "                ax\n",
     "            )\n",
+    "            \n",
+    "        plt.xlim([136,158])\n",
+    "        plt.ylim([-42,-20])\n",
     "        \n",
-    "        ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes, fontsize=22)\n",
+    "        ax.text(\n",
+    "            0.04,0.05,\n",
+    "            \"n=\"+str(nEvents), \n",
+    "            transform=ax.transAxes, \n",
+    "            backgroundcolor='white',\n",
+    "            zorder=4\n",
+    "        )\n",
     "        \n",
     "        plt.title(iEvent)\n",
     "        \n",
-    "        axesLs.append(ax)\n",
+    "        axs.append(ax)\n",
     "        \n",
-    "    return axesLs, cs\n",
+    "        \n",
+    "    plt.subplots_adjust(hspace=0.02,wspace=0)\n",
+    "\n",
+    "        #put a color bar on\n",
+    "       \n",
+    "    axs.append(fig.add_axes([0.3,0.2,0.4,0.03]))\n",
+    "    cbar=plt.colorbar(\n",
+    "        cm.ScalarMappable(cs.norm,cs.cmap),\n",
+    "        orientation='horizontal', \n",
+    "        cax=axs[-1], \n",
+    "        extend='both', \n",
+    "        boundaries=cs.get_array(), \n",
+    "        label = cbarLabel,\n",
+    "    )\n",
+    "    \n",
+    "        \n",
+    "    return axs \n",
     "        \n",
     "        "
    ]
