--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -192,7 +192,6 @@
     "\n",
     "    \n",
     "    mainColor=['red','blue','green','orange','purple']\n",
-    "    lightColor=['tomato','lightblue','lightgreen', 'wheat']\n",
     "    \n",
     "    # for each variable number\n",
     "    for i in range(nIndices):\n",
@@ -211,8 +210,8 @@
     "            plotData.year.values, \n",
     "            plotData.min(dims).values, \n",
     "            plotData.max(dims).values, \n",
-    "            color=[lightColor[i]], \n",
-    "            alpha=0.25\n",
+    "            color=mainColor[i], \n",
+    "            alpha=0.1\n",
     "        )\n",
     "\n",
     "        if len(args)==1:\n",
