--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "3385a297-ed64-40fe-aa75-426b7089c514",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
     "        precContours=numpy.arange(-1.6,1.61,0.2)\n",
     "        cmap='BrBG'\n",
     "    elif tsMatcher.search(da.name):\n",
-    "        precContours=numpy.arange(-3.25,3.26,0.5)\n",
+    "        precContours=numpy.arange(-2,2,0.25)\n",
     "        cmap='coolwarm'\n",
     "    else:\n",
     "        precContours=numpy.linspace(da.min(), da.max(), 7)\n",
@@ -99,7 +99,7 @@
     "    gl.ylocator = mticker.FixedLocator([-50,-40,-30,-20,-10,0])\n",
     "    \n",
     "\n",
-    "    return cs\n"
+    "    return cs , gl\n"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "\n",
     "        nEvents=impactXr.where(fEventsXr[iEvent]==True).isel(lon=15,lat=15).count().values\n",
     "                            \n",
-    "        cs = plotAnom(\n",
+    "        cs,gl = plotAnom(\n",
     "            impactXr.where(fEventsXr[iEvent]==True).mean(dimsNotLatLon),\n",
     "            ax,\n",
     "            showOcean\n",
