--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -30,6 +30,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5c08d042-7dd4-4593-b9ea-5ad0ae0be0e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function to trim to the area of interest for this study\n",
+    "def domain(ds):\n",
+    "    return ds.where(\n",
+    "    (ds.lat<-28)\n",
+    "        *(ds.lat>-39)\n",
+    "        *(ds.lon>144)\n",
+    "        *(ds.lon<155),\n",
+    "    drop=True\n",
+    ")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fdc4ad54-3c79-4853-9775-e5f91fae207a",
    "metadata": {},
@@ -223,7 +243,7 @@
     "            \n",
     "            toPlot = da.where(plotCond).mean(['year'])\n",
     "            \n",
-    "            cs = plotAnom(toPlot.mean('model'), ax)\n",
+    "            cs, gl = plotAnom(toPlot.mean('model'), ax)\n",
     "            \n",
     "            if stipling:\n",
     "                plotStipling(\n",
@@ -235,10 +255,10 @@
     "            plt.ylim([-47,-20])\n",
     "            \n",
     "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
-    "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
+    "            nEvents=(da.where(plotCond).isel(lon=17,lat=15).count()/(50*37)*100).values\n",
     "            ax.text(\n",
     "                0.035,0.045,\n",
-    "                \"n=\"+str(nEvents), \n",
+    "                \"n=\"+f'{nEvents:.0f}'+'%', \n",
     "                transform=ax.transAxes, \n",
     "                backgroundcolor='white',\n",
     "                zorder=2\n",
