--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "002bf925-5936-4643-8a8b-73afcae831a4",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
     "\n",
     "        #put a color bar on\n",
     "       \n",
-    "    axs.append(fig.add_axes([0.3,0.2,0.4,0.03]))\n",
+    "    axs.append(fig.add_axes([(1-1/nIndex)/2,0.2,1/nIndex,0.03]))\n",
     "    cbar=plt.colorbar(\n",
     "        cm.ScalarMappable(cs.norm,cs.cmap),\n",
     "        orientation='horizontal', \n",
@@ -371,6 +371,14 @@
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e4bcc0-dd01-4fba-9511-0ec7b27cfbce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
