tweaks to plots and detrended cmip results too

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -829,7 +829,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results=xarray.open_dataset('results/cmip6ssp585TradIndecesTos.nc').sel(year=slice(1850,2099))"
+    "results=xarray.open_dataset('results/cmip6ssp585TradIndecesTos.nc').sel(year=slice(1850,2099))\n",
+    "piControl"
    ]
   },
   {
@@ -1619,6 +1620,22 @@
     "        plotData.year, plotData.min('model').values, plotData.max('model').values, \n",
     "                     color=colors[i], alpha=0.25\n",
     "    )\n",
+    "    \n",
+    "    piMean = piControl.mean()\n",
+    "    piStd = piControl.std('model').mean()\n",
+    "    #piMean=(piControl.rolling(year=30, min_periods=15, center=True).mean('year')).mean()\n",
+    "    #piStd=(piControl.rolling(year=30, min_periods=15, center=True).mean('year')).std()\n",
+    "\n",
+    "    plt.hlines(\n",
+    "        [piMean+1.96*piStd,piMean-1.96*piStd],\n",
+    "        1850,\n",
+    "        2100, \n",
+    "        color='grey', \n",
+    "        linestyles='dashed', \n",
+    "        alpha=0.5\n",
+    "    )\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    plt.xlim([1900,2100])\n",
     "    plt.ylim([-5,7])\n",
