--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "11d37a6b-5122-465e-9486-bda6da8bf762",
+   "metadata": {},
+   "source": [
+    "# A collection of functions to do spatial plots of rainfall and temperature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "248e9316-6a96-46bf-bac2-12928fe4058c",
    "metadata": {},
    "outputs": [],
@@ -22,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#some regex matches to help with identifying what data field this is\n",
     "import re\n",
     "\n",
     "prMatcher=re.compile('ps')\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5c08d042-7dd4-4593-b9ea-5ad0ae0be0e6",
    "metadata": {},
    "outputs": [],
@@ -40,9 +49,9 @@
     "def domain(ds):\n",
     "    return ds.where(\n",
     "    (ds.lat<-28)\n",
-    "        *(ds.lat>-39)\n",
-    "        *(ds.lon>144)\n",
-    "        *(ds.lon<155),\n",
+    "    *(ds.lat>-39)\n",
+    "    *(ds.lon>144)\n",
+    "    *(ds.lon<155),\n",
     "    drop=True\n",
     ")\n",
     "    \n",
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3385a297-ed64-40fe-aa75-426b7089c514",
    "metadata": {
     "tags": []
@@ -75,12 +84,26 @@
    "outputs": [],
    "source": [
     "def plotAnom(da, ax, showOcean=True):\n",
-    "    \"\"\"For a provided dataarray and axis, plot the data, add coastlines and \"\"\"\n",
+    "    \"\"\"For a provided dataarray and axis:\n",
+    "    - plot the data\n",
+    "    - add coastlines\n",
+    "    - add a box for the area of interest\n",
+    "    \n",
+    "    \n",
+    "    showOcean: Shows the data over an ocean area (True), or draw white over the ocean (False)\n",
+    "    \n",
+    "    e.g.:\n",
+    "    \n",
+    "    da might be a multi-model mean (ie ... da.mean('model')), or\n",
+    "    da might be observational data, or\n",
+    "    da might be data from a single model\n",
+    "    \n",
+    "    \"\"\"\n",
     "    \n",
     "    import cartopy.feature as cfeature\n",
     "    import matplotlib.ticker as mticker\n",
     "    \n",
-    "        #set contour intervals and colours\n",
+    "    #set contour intervals and colours\n",
     "    if prPrecMatcher.search(da.name):\n",
     "        precContours=numpy.arange(-50,51,10)\n",
     "        cmap='BrBG'\n",
@@ -94,7 +117,7 @@
     "        precContours=numpy.linspace(da.min(), da.max(), 7)\n",
     "        cmap='viridis'\n",
     "    \n",
-    "     #do the plotting\n",
+    "    #do the plotting\n",
     "    cs=plt.contourf(\n",
     "        da.lon, da.lat, da , precContours, \n",
     "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both'\n",
@@ -102,16 +125,19 @@
     "    \n",
     "    #draw the coast too\n",
     "    ax.coastlines(color='black')\n",
+    "    \n",
     "    if showOcean==False:\n",
+    "        #draw white over the ocean\n",
     "        ax.add_feature(cfeature.OCEAN,zorder=2,color='white')\n",
     "        \n",
-    "    #deaw a box around the area of interest\n",
+    "    #draw a box around the area of interest\n",
     "    ax.add_patch(\n",
     "        mpatches.Rectangle(\n",
     "            xy=[144, -39], width=11, height=11,edgecolor='red',facecolor='none',zorder=3\n",
     "        ),\n",
     "    )\n",
     "        \n",
+    "    # draw long/lat lines, with right and bottom labels\n",
     "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':',zorder=3)\n",
     "    gl.top_labels=False\n",
     "    gl.left_labels=False\n",
@@ -123,8 +149,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b463769-6617-4789-b8e0-198436d5f751",
+   "metadata": {},
+   "source": [
+    "This function adds stipling, to a multi-model mean impact map"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "03ce2e5a-cd64-4f51-b03e-3be38e33f240",
    "metadata": {
     "tags": []
@@ -132,12 +166,17 @@
    "outputs": [],
    "source": [
     "def plotStipling(da, ax):\n",
-    "    \"\"\"For a provided Dataarray and axis, \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    For a provided Dataarray and axis, \n",
     "    add stipling where less than 70% of models agree with the sign of the change.\n",
     "    \n",
     "    Provided Dataarray is assumed to:\n",
     "    - have dimensions lon,lat and model\n",
     "    - be a datarray representing the mean impact in each model from 0/1/2/3 climate modes\n",
+    "    \n",
+    "    This is a way to represent uncertainty in a plot (e.g. of a multi-model mean)\n",
+    "    \n",
     "    \"\"\"\n",
     "    \n",
     "    try:\n",
@@ -170,7 +209,7 @@
     "\n",
     "    #plot it\n",
     "    plt.sca(ax)\n",
-    "    plt.pcolor(\n",
+    "    c=plt.pcolor(\n",
     "        combined.lon, \n",
     "        combined.lat,\n",
     "        numpy.ma.masked_equal(combined,0),\n",
@@ -178,7 +217,8 @@
     "        alpha=0,\n",
     "        shading='auto'\n",
     "    )\n",
-    "\n"
+    "    \n",
+    "    return c\n"
    ]
   },
   {
@@ -191,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
     "tags": []
@@ -203,7 +243,9 @@
     "    #Decide how many rows we are going to have\n",
     "    if da.year[0]<1850:\n",
     "        years=[\n",
-    "            [850,1850],[1950,1999],[2050,2099]\n",
+    "            [850,1850],\n",
+    "            [1950,1999],\n",
+    "            [2050,2099]\n",
     "        ]\n",
     "        lenYears=3\n",
     "    elif da.year[-1]<2050:\n",
@@ -298,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "002bf925-5936-4643-8a8b-73afcae831a4",
    "metadata": {},
    "outputs": [],
