--- a/prelim/agcdPrTAnoms.ipynb
+++ b/prelim/agcdPrTAnoms.ipynb
@@ -1753,10 +1753,13 @@
    "outputs": [],
    "source": [
     "prTWarmSeasonXr=tp.averageForTimePeriod(prTAnomsXr).rename(\n",
-    "    {'tsWinter':'tsAnomWinter',\n",
-    "     'prWinter':'prAnomWinter',\n",
-    "    'tsSummer':'tsAnomSummer',\n",
-    "    'prSummer':'prAnomSummer'})"
+    "    {\n",
+    "        'tsWinter':'tsAnomWinter',\n",
+    "        'prWinter':'prAnomWinter',\n",
+    "        'tsSummer':'tsAnomSummer',\n",
+    "        'prSummer':'prAnomSummer'\n",
+    "    }\n",
+    ")"
    ]
   },
   {
