--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -16,15 +16,19 @@
    "outputs": [],
    "source": [
     "def emergePlot(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
+    "    '''\n",
+    "    plot indeces for multi-experiment mean, and add some lines for CI\n",
     "\n",
+    "    '''\n",
+    "    #somewhere to save axes\n",
     "    ax=list()\n",
-    "    # plot indeces for multi-experiment mean, and add some lines for CI\n",
     "    \n",
-    "    # multi-experiment mean state (by index and time)\n",
+    "    # multi-experiment mean state (by model and time)\n",
     "    meanXr=climatXr.mean()\n",
     "    \n",
+    "    # get a list of the coords, and remove year. Which leaves experiment or model.\n",
     "    dims=list(climatXr.coords)\n",
-    "    dims.remove('year') #this is normall experiment (for CESM) or model (for CMIP)\n",
+    "    dims.remove('year') \n",
     "    \n",
     "    stdXr=climatXr.mean('year').std(dims)\n",
     "    \n",
@@ -34,7 +38,6 @@
     "    #these are the variable/index names to plot\n",
     "    #all variables that not empty\n",
     "    indexToPlot = list(binnedXr.where(binnedXr.isnull().all()==False).data_vars)\n",
-    "    \n",
     "    nIndices=len(indexToPlot)\n",
     "\n",
     "    # define somewhere to plot\n",
