--- a/cesmIndeces.ipynb
+++ b/cesmIndeces.ipynb
@@ -810,8 +810,8 @@
     "    #plt.legend(loc='upper left')\n",
     "    \n",
     "    \n",
-    "    mean=results[indexToPlot[i]].sel(experiment=_model.cesmCntl).rolling(year=30, min_periods=15, center=True).mean('year').mean().values\n",
-    "    std=results[indexToPlot[i]].sel(experiment=_model.cesmCntl).rolling(year=30, min_periods=15, center=True).mean('year').std().values\n",
+    "    mean=plotData.mean().values\n",
+    "    std=plotData.std().values\n",
     "    \n",
     "    plt.hlines([mean+1.96*std,mean-1.96*std],1000,2100, linestyles='dashed', color='grey')\n",
     "   \n",
@@ -2017,7 +2017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
