--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -105,7 +105,7 @@
     "    \n",
     "    #set contour intervals and colours\n",
     "    if prPrecMatcher.search(da.name):\n",
-    "        precContours=numpy.arange(-50,51,10)\n",
+    "        precContours=numpy.arange(-35,36,5)\n",
     "        cmap='BrBG'\n",
     "    elif prMatcher.search(da.name):\n",
     "        precContours=numpy.arange(-1.6,1.61,0.2)\n",
@@ -219,6 +219,45 @@
     "    )\n",
     "    \n",
     "    return c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "23974906-5904-4b2e-9165-b52cc3800cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def singleAnomWithStipling(da, iComp, iSeason, iImpact='Rain'):\n",
+    "    \n",
+    "    season=iSeason.capitalize() +' '+ iImpact\n",
+    "    \n",
+    "    plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    if iImpact=='Rain':\n",
+    "        toPlot = prXr[season].where(plotCond)\n",
+    "    elif iImpact=='Temp':\n",
+    "        toPlot = detrendTsXr[season].where(plotCond)\n",
+    "    cs, gl=plotAnom(toPlot.mean(['year','model']), ax)\n",
+    "    plotStipling(toPlot.mean('year'),ax)\n",
+    "\n",
+    "    plt.xlim([136,163])\n",
+    "    plt.ylim([-47,-20])\n",
+    "\n",
+    "    #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
+    "    nEvents=(\n",
+    "        toPlot.isel(lon=17,lat=15).count()\n",
+    "        /(50*37)\n",
+    "        *100\n",
+    "    ).values\n",
+    "    ax.text(\n",
+    "        0.035,0.045,\n",
+    "        \"n=\"+f'{nEvents:.0f}'+'%', \n",
+    "        transform=ax.transAxes, \n",
+    "        backgroundcolor='white',\n",
+    "        zorder=2\n",
+    "    )\n",
+    "    \n",
+    "    return cs, gl\n"
    ]
   },
   {
@@ -439,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
