--- a/obsIndeces.ipynb
+++ b/obsIndeces.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "70fa71cd-e8b1-4143-964b-503d9ff57618",
+   "metadata": {},
+   "source": [
+    "# calculate events from Observational records of climate modes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6096cdab-721c-49f1-98e7-6a5779012307",
@@ -12,6 +20,7 @@
     "import xarray\n",
     "import pandas\n",
     "\n",
+    "#stuff to help with plotting\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
@@ -3272,7 +3281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
