--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -228,12 +228,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def singleAnomWithStipling(da, iComp, iSeason, iImpact='Rain'):\n",
+    "def singleAnomWithStipling(da, iComp, iSeason, iImpact='Rain',*args):\n",
     "    \n",
     "    season=iSeason.capitalize() +' '+ iImpact\n",
     "    \n",
     "    plotCond = da.sel(compound=iComp,drop=True)\n",
-    "    if iImpact=='Rain':\n",
+    "    if len(args)==1:\n",
+    "        toPlot=args[0][season].where(plotCond)\n",
+    "    elif iImpact=='Rain':\n",
     "        toPlot = prXr[season].where(plotCond)\n",
     "    elif iImpact=='Temp':\n",
     "        toPlot = detrendTsXr[season].where(plotCond)\n",
@@ -261,6 +263,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3216b2f5-49ef-4e6a-997c-0c0d400bfc0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def singleAnom(da, iComp, iSeason, iImpact='Rain', *args):\n",
+    "    \n",
+    "    season=iSeason.capitalize() +' '+ iImpact\n",
+    "    \n",
+    "    plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    if len(args)==1:\n",
+    "        toPlot=args[0][season].where(plotCond)\n",
+    "    elif iImpact=='Rain':\n",
+    "        toPlot = prXr[season].where(plotCond)\n",
+    "    elif iImpact=='Temp':\n",
+    "        toPlot = detrendTsXr[season].where(plotCond)\n",
+    "    cs, gl=plotAnom(toPlot.mean(['year']), ax)\n",
+    "\n",
+    "    plt.xlim([136,163])\n",
+    "    plt.ylim([-47,-20])\n",
+    "\n",
+    "    #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
+    "    nEvents=(\n",
+    "        toPlot.isel(lon=17,lat=15).count()\n",
+    "        #/da.year.count()\n",
+    "        #*100\n",
+    "    ).values\n",
+    "    ax.text(\n",
+    "        0.035,0.045,\n",
+    "        \"n=\"+f'{nEvents:.0f}',#+'%', \n",
+    "        transform=ax.transAxes, \n",
+    "        backgroundcolor='white',\n",
+    "        zorder=2\n",
+    "    )\n",
+    "    \n",
+    "    return cs, gl\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "18cb6e57-7bba-4a93-ac44-afa4d4aede41",
    "metadata": {},
@@ -273,6 +315,9 @@
    "execution_count": null,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -478,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
