tweaks to impact plots

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -256,7 +256,7 @@
     "        \"n=\"+f'{nEvents:.0f}'+'%', \n",
     "        transform=ax.transAxes, \n",
     "        backgroundcolor='white',\n",
-    "        zorder=2\n",
+    "        zorder=3\n",
     "    )\n",
     "    \n",
     "    return cs, gl\n"
@@ -280,7 +280,7 @@
     "        toPlot = prXr[season].where(plotCond)\n",
     "    elif iImpact=='Temp':\n",
     "        toPlot = detrendTsXr[season].where(plotCond)\n",
-    "    cs, gl=plotAnom(toPlot.mean(['year']), ax)\n",
+    "    cs, gl=plotAnom(toPlot.mean(['year']), ax,showOcean=False)\n",
     "\n",
     "    plt.xlim([136,163])\n",
     "    plt.ylim([-47,-20])\n",
@@ -288,15 +288,15 @@
     "    #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
     "    nEvents=(\n",
     "        toPlot.isel(lon=17,lat=15).count()\n",
-    "        #/da.year.count()\n",
-    "        #*100\n",
+    "        /da.year.count()\n",
+    "        *100\n",
     "    ).values\n",
     "    ax.text(\n",
     "        0.035,0.045,\n",
-    "        \"n=\"+f'{nEvents:.0f}',#+'%', \n",
+    "        \"n=\"+f'{nEvents:.0f}'+'%', \n",
     "        transform=ax.transAxes, \n",
     "        backgroundcolor='white',\n",
-    "        zorder=2\n",
+    "        zorder=3\n",
     "    )\n",
     "    \n",
     "    return cs, gl\n"
@@ -523,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
