--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -120,7 +120,7 @@
     "    #do the plotting\n",
     "    cs=plt.contourf(\n",
     "        da.lon, da.lat, da , precContours, \n",
-    "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both'\n",
+    "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both', edgecolors='face'\n",
     "    )\n",
     "    \n",
     "    #draw the coast too\n",
