--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -39,26 +39,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c08d042-7dd4-4593-b9ea-5ad0ae0be0e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A function to trim to the area of interest for this study\n",
-    "def domain(ds):\n",
-    "    return ds.where(\n",
-    "    (ds.lat<-28)\n",
-    "    *(ds.lat>-39)\n",
-    "    *(ds.lon>144)\n",
-    "    *(ds.lon<155),\n",
-    "    drop=True\n",
-    ")\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fdc4ad54-3c79-4853-9775-e5f91fae207a",
    "metadata": {},
@@ -120,7 +100,7 @@
     "    #do the plotting\n",
     "    cs=plt.contourf(\n",
     "        da.lon, da.lat, da , precContours, \n",
-    "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both', edgecolors='face'\n",
+    "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both', \n",
     "    )\n",
     "    \n",
     "    #draw the coast too\n",
@@ -315,9 +295,6 @@
    "execution_count": null,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -366,7 +343,7 @@
     "            )\n",
     "              #years to plot\n",
     "            plotCond = mask[indeces[i]].sel(year=slice(iYears[0],iYears[1]))\n",
-    "            \n",
+    "\n",
     "            toPlot = da.where(plotCond).mean(['year'])\n",
     "            \n",
     "            cs, gl = plotAnom(toPlot.mean('model'), ax)\n",
@@ -509,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
