--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -2,11 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26fc3871-8eb7-4ca6-80c3-3c7302198dcc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def domain(ds):\n",
+    "    \n",
+    "    \"\"\"Returns the area of a lat/lon xarrray which us over land and within the bounds for this research\"\"\"\n",
+    "    \n",
+    "    # this is the mask of land area\n",
+    "    landMask=xarray.open_dataset(\n",
+    "        'helpers/cmip6LandMask.nc'\n",
+    "    )\n",
+    "    \n",
+    "    # apply a weighting by the percentage of the cell which is land area\n",
+    "    # and set non-land area to Nan\n",
+    "    result=(ds*landMask.sftlf/100).where(\n",
+    "        landMask.sftlf>0\n",
+    "    )\n",
+    "    \n",
+    "    #slice to my area of interest\n",
+    "    #I added a 0.75 margin as this is half the grid square size\n",
+    "    result=result.sel(\n",
+    "        lat=slice(-39-0.75,-28+0.75),\n",
+    "        lon=slice(144-0.75,155+0.75)\n",
+    "    )\n",
+    "    \n",
+    "    if type(ds)==xarray.core.dataarray.DataArray:\n",
+    "        #keep the old name\n",
+    "        result=result.rename(ds.name)\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9d2cb327-4eb0-4cb6-a9c6-3d3318b806ad",
+   "metadata": {},
+   "source": [
+    "# A function to trim to the area of interest for this study\n",
+    "def domain(ds):\n",
+    "    return ds.where(\n",
+    "    (ds.lat<=-28)\n",
+    "    *(ds.lat>=-39)\n",
+    "    *(ds.lon>=144)\n",
+    "    *(ds.lon<=155),\n",
+    "    drop=True\n",
+    ")\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -244,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
