update names and plots

--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "26fc3871-8eb7-4ca6-80c3-3c7302198dcc",
    "metadata": {},
    "outputs": [],
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b480e00c-dbeb-44c5-8e52-0c5a3b3bc2e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def emergePlot(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
+    "def emergePlot(binnedXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
     "    '''\n",
     "    plot indeces for multi-experiment mean, and add some lines for CI\n",
     "\n",
@@ -69,14 +69,9 @@
     "    #somewhere to save axes\n",
     "    ax=list()\n",
     "    \n",
-    "    # multi-experiment mean state (by model and time)\n",
-    "    meanXr=climatXr.mean()\n",
-    "    \n",
     "    # get a list of the coords, and remove year. Which leaves experiment or model.\n",
-    "    dims=list(climatXr.coords)\n",
+    "    dims=list(binnedXr.coords)\n",
     "    dims.remove('year') \n",
-    "    \n",
-    "    stdXr=climatXr.mean('year').std(dims)\n",
     "    \n",
     "    #Z = 1.645 #Z-score for a 90% CI\n",
     "    Z=1.96 #Z-score for a 95% CI\n",
@@ -98,28 +93,24 @@
     "        # plot the actual data\n",
     "        plotData=binnedXr[indexToPlot[i]]\n",
     "\n",
-    "        \n",
     "        mean=plotData.mean(dims)\n",
     "        std=plotData.std(dims)\n",
     "        \n",
     "        #blue line for multi-experiment mean, and light blue shading between min and max\n",
-    "        plt.plot(mean.year, \n",
-    "                 mean, \n",
-    "                 label=indexToPlot[i])\n",
-    "        plt.fill_between(mean.year, \n",
-    "                         #mean+Z*std,\n",
-    "                         #mean-Z*std,\n",
-    "                         plotData.min(dims),\n",
-    "                         plotData.max(dims),\n",
-    "                         color='lightblue')\n",
+    "        plt.plot(\n",
+    "            mean.year, \n",
+    "            mean, \n",
+    "            label=indexToPlot[i]\n",
+    "        )\n",
+    "        plt.fill_between(\n",
+    "            mean.year, \n",
+    "            #mean+Z*std,\n",
+    "            #mean-Z*std,\n",
+    "            plotData.min(dims),\n",
+    "            plotData.max(dims),\n",
+    "            color='lightblue'\n",
+    "        )\n",
     "\n",
-    "\n",
-    "        # draw some horizontal lines for criteria\n",
-    "        plt.axhline(y=meanXr[indexToPlot[i]]+Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
-    "        plt.axhline(y=meanXr[indexToPlot[i]]-Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
-    "\n",
-    "        #plt.axvline(x=1995)\n",
-    "        \n",
     "        #Tidy up a bit\n",
     "        plt.xlim(xlim)\n",
     "        plt.ylabel(yLabel)\n",
@@ -130,7 +121,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "id": "0a078395-e752-4e47-9390-c6ab1477cfb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def emergePlotWithModelCount(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
+    "    '''\n",
+    "    plot indeces for multi-experiment mean, and add some lines for CI\n",
+    "\n",
+    "    '''\n",
+    "    #somewhere to save axes\n",
+    "    ax=list()\n",
+    "    \n",
+    "    # multi-experiment mean state (by model and time)\n",
+    "    meanXr=climatXr.mean('year')\n",
+    "    stdXr=climatXr.std('year')\n",
+    "\n",
+    "    # get a list of the coords, and remove year. Which leaves experiment or model.\n",
+    "    dims=list(climatXr.coords)\n",
+    "    dims.remove('year') \n",
+    "    \n",
+    "    #Z = 1.645 #Z-score for a 90% CI\n",
+    "    Z=1.96 #Z-score for a 95% CI\n",
+    "\n",
+    "    #these are the variable/index names to plot\n",
+    "    #all variables that not empty\n",
+    "    indexToPlot = list(binnedXr.where(binnedXr.isnull().all()==False).data_vars)\n",
+    "    nIndices=len(indexToPlot)\n",
+    "\n",
+    "    #emergence\n",
+    "    emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
+    "    \n",
+    "    # define somewhere to plot\n",
+    "    fig = plt.figure(figsize=(12,4*nIndices))\n",
+    "\n",
+    "    # for each variable number\n",
+    "    for i in range(nIndices):\n",
+    "\n",
+    "        #create a subplot (row, column, size)\n",
+    "        ax.append(fig.add_subplot(2*nIndices,1,2*i+1))\n",
+    "\n",
+    "        # plot the actual data\n",
+    "        plotData=binnedXr[indexToPlot[i]]\n",
+    "\n",
+    "        \n",
+    "        mmmean=plotData.mean(dims)\n",
+    "        \n",
+    "        #blue line for multi-experiment mean, and light blue shading between min and max\n",
+    "        plt.plot(mmmean.year, \n",
+    "                 mmmean, \n",
+    "                 label=indexToPlot[i])\n",
+    "        plt.fill_between(mmmean.year, \n",
+    "                         plotData.min(dims),\n",
+    "                         plotData.max(dims),\n",
+    "                         color='lightblue')\n",
+    "        #Tidy up a bit\n",
+    "        plt.xlim(xlim)\n",
+    "        plt.ylabel(yLabel)\n",
+    "        plt.legend()\n",
+    "        \n",
+    "        #create a subplot (row, column, size)\n",
+    "        ax.append(fig.add_subplot(2*nIndices,1,2*i+2))\n",
+    "        \n",
+    "        posEmergeNd=numpy.greater(\n",
+    "            emergeXr[indexToPlot[i]].sel(year=slice(1866,2085),drop=True).values,\n",
+    "            emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
+    "        )\n",
+    "        negEmergeNd=numpy.less(\n",
+    "            emergeXr[indexToPlot[i]].sel(year=slice(1866,2085),drop=True).values,\n",
+    "            emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
+    "        )\n",
+    "        modelCount=numpy.ndarray(221)\n",
+    "        modelCount[0]=0\n",
+    "        for iYear in range(1,221):\n",
+    "            modelCount[iYear]=(\n",
+    "                numpy.count_nonzero(\n",
+    "                    (numpy.all(posEmergeNd[:,iYear:]==False,1))\n",
+    "                    &numpy.not_equal(\n",
+    "                        numpy.count_nonzero(posEmergeNd,1),\n",
+    "                        numpy.count_nonzero(negEmergeNd,1)\n",
+    "                    )\n",
+    "                 )\n",
+    "            )\n",
+    "            \n",
+    "        print(modelCount[-1])\n",
+    "        \n",
+    "        plt.fill_between(\n",
+    "            range(0,221),\n",
+    "            0,\n",
+    "            modelCount/35*100,\n",
+    "            color='brown', \n",
+    "            alpha=0.5\n",
+    "        )\n",
+    "        \n",
+    "        plt.hlines(70,0,2100, color='grey', linestyle='dashed')\n",
+    "        \n",
+    "        plt.xticks(ticks=[35,60,85,110,135,160,185,210], labels=range(1900,2100,25))\n",
+    "        plt.yticks([0,35,70])\n",
+    "        plt.ylim([0,100])\n",
+    "        plt.xlim((xlim[0]-1865,xlim[1]-1865))\n",
+    "        plt.ylabel('Emerge (%)')\n",
+    "\n",
+    "        \n",
+    "\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "434e5cab-6286-4698-ad2c-9c52ab8221d4",
    "metadata": {},
    "outputs": [],
@@ -189,8 +289,6 @@
     "        plt.axhline(y=meanXr[indexToPlot[i]]+Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
     "        plt.axhline(y=meanXr[indexToPlot[i]]-Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
     "\n",
-    "        #plt.axvline(x=1995)\n",
-    "        \n",
     "        #Tidy up a bit\n",
     "        plt.xlim(xlim)\n",
     "        plt.ylabel(yLabel)\n",
@@ -201,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c3a2531b-5a2d-4b9d-8c9d-6f35d87e9aba",
    "metadata": {},
    "outputs": [],
