--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "248e9316-6a96-46bf-bac2-12928fe4058c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "508358c6-98f0-4f01-b902-205a61a5e3d8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3385a297-ed64-40fe-aa75-426b7089c514",
    "metadata": {
     "tags": []
@@ -91,6 +91,8 @@
     "        precContours=numpy.arange(-1.6,1.61,0.2)\n",
     "        cmap='BrBG'\n",
     "    elif tsMatcher.search(da.name):\n",
+    "        #precContours=numpy.arange(0,5.5,0.5)\n",
+    "        #cmap='Reds'\n",
     "        precContours=numpy.arange(-2,2,0.25)\n",
     "        cmap='coolwarm'\n",
     "    else:\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "03ce2e5a-cd64-4f51-b03e-3be38e33f240",
    "metadata": {
     "tags": []
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "23974906-5904-4b2e-9165-b52cc3800cdb",
    "metadata": {},
    "outputs": [],
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "3216b2f5-49ef-4e6a-997c-0c0d400bfc0f",
    "metadata": {},
    "outputs": [],
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
     "tags": []
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "002bf925-5936-4643-8a8b-73afcae831a4",
    "metadata": {},
    "outputs": [],
