--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -184,23 +184,34 @@
     "        #create a subplot (row, column, size)\n",
     "        ax.append(fig.add_subplot(2*nIndices,1,2*i+2))\n",
     "        \n",
+    "        emergeNd=emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
+    "        \n",
     "        posEmergeNd=numpy.greater(\n",
-    "            emergeXr[indexToPlot[i]].sel(year=slice(1866,2085),drop=True).values,\n",
-    "            emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
+    "            emergeNd[:,1:-1],\n",
+    "            emergeNd[:,0:-2]\n",
     "        )\n",
     "        negEmergeNd=numpy.less(\n",
-    "            emergeXr[indexToPlot[i]].sel(year=slice(1866,2085),drop=True).values,\n",
-    "            emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
+    "            emergeNd[:,1:-1],\n",
+    "            emergeNd[:,0:-2]\n",
     "        )\n",
-    "        modelCount=numpy.ndarray(221)\n",
+    "        #print((posEmergeNd))\n",
+    "        #print((negEmergeNd))\n",
+    "        modelCount=numpy.ndarray(220)\n",
     "        modelCount[0]=0\n",
-    "        for iYear in range(1,221):\n",
+    "        for iYear in range(1,220):\n",
     "            modelCount[iYear]=(\n",
     "                numpy.count_nonzero(\n",
-    "                    (numpy.all(posEmergeNd[:,iYear:]==False,1))\n",
+    "                    (numpy.all(posEmergeNd[\n",
+    "                        :,\n",
+    "                        iYear:]==False,\n",
+    "                               1\n",
+    "                              ))\n",
     "                    &numpy.not_equal(\n",
-    "                        numpy.count_nonzero(posEmergeNd,1),\n",
-    "                        numpy.count_nonzero(negEmergeNd,1)\n",
+    "                        numpy.count_nonzero(posEmergeNd,1\n",
+    "                                           ),\n",
+    "                        numpy.count_nonzero(negEmergeNd,1\n",
+    "                                           )-emergeNd[:,\n",
+    "                            0]\n",
     "                    )\n",
     "                 )\n",
     "            )\n",
@@ -208,7 +219,7 @@
     "        print(modelCount[-1])\n",
     "        \n",
     "        plt.fill_between(\n",
-    "            range(0,221),\n",
+    "            range(0,220),\n",
     "            0,\n",
     "            modelCount/35*100,\n",
     "            color='brown', \n",
@@ -218,8 +229,8 @@
     "        plt.hlines(70,0,2100, color='grey', linestyle='dashed')\n",
     "        \n",
     "        plt.xticks(ticks=[35,60,85,110,135,160,185,210], labels=range(1900,2100,25))\n",
-    "        plt.yticks([0,35,70])\n",
-    "        plt.ylim([0,100])\n",
+    "        plt.yticks([0,35,70,100])\n",
+    "        plt.ylim([0,105])\n",
     "        plt.xlim((xlim[0]-1865,xlim[1]-1865))\n",
     "        plt.ylabel('Emerge (%)')\n",
     "\n",
